# fileserver.minx

./: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon  build.zig.zon.nix  default.nix  flake.nix
src/: code.css  directory_listing.zig  filesystem.rs  filetypes.zig  main.rs  main.zig  pandoc_highlight.lua  response_builder.rs  timestamped_log.zig  util.zig
src/filesystem/: file_listing.rs  pdf_page_count.rs
static/: directory_listing.css  file_listing.css
templates/: directory.html  error.html  file_listing.html
