[package]
name = "fileserver_minx"
version = "0.1.0"
edition = "2024"

[dependencies]
# env_logger = "0.11.10"
anyhow = "1.0.102"
axum = { version = "0.8.9", features = [ "macros" ] }
chrono = "0.4.45"
http-body-util = "0.1.3"
mime_guess = "2.0.5"
minijinja = "2.20.0"
percent-encoding = "2.3.2"
serde = { version = "1.0.228", features = [ "derive" ] }
tokio = { version = "1.52.3", features = [ "rt-multi-thread" ] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = [ "fs", "catch-panic" ] }
